styles/_header.scss
  // HEADER
  .port-navbar.port-nav-base {
    position: fixed;
    width: 100%;
    height: 50px;
    z-index: 15;
    padding: 40px;
  
    .port-navbar {
      &-brand {
        color: white;
        font-size: 24px;
        text-transform: uppercase;
        letter-spacing: 1px;
        font-weight: bold;
      }
  
      &-item {
        margin-left: 10px;
        margin-right: 10px;
      }
  
      &-link {
        color: white;
        font-weight: bold;
        letter-spacing: 0.8px;
        font-size: 14px;
        text-transform: uppercase;
  
        &.active {
        color: #dba919;
        }
  
        &:hover, &:focus {
          color: #dba919;
        }
      }
    }

    .port-dropdown-menu {
  
      .port-dropdown-item {
        color: black;
        &.active {
          color: #dba919;
        }
      }

      .port-dropdown-toogle {
        color: white;
      }
    }
  
  }

  
  .port-navbar.port-nav-base.port-nav-default {
    padding: 30px;
    background-color: $secondary !important;
  }

